// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot renders 1`] = `
<div
  className="service-question-table"
>
  <h3>
    Service Questions
  </h3>
  <div>
    Note: Types are (TrueFalse, MultipleChoice, Range) and choices are Comma-separated
  </div>
  <table
    className="service-q-a-table"
  >
    <thead
      className="service-q-a-table-header"
    >
      <tr
        className="service-q-a-table-row"
      >
        <th>
          ID
        </th>
        <th>
          Question
        </th>
        <th>
          Type
        </th>
        <th>
          Choices
        </th>
        <th>
          Commands
        </th>
      </tr>
    </thead>
    <tbody
      className="service-q-a-tableBody"
    >
      <tr
        className="service-q-a-input-row"
      >
        <td />
        <td>
          <input
            className="service-question-input-question"
            onChange={[Function]}
            placeholder="Question"
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            className="service-question-input-type"
            onChange={[Function]}
            placeholder="Type"
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            className="service-question-input-choices"
            onChange={[Function]}
            placeholder="Choices"
            type="text"
            value=""
          />
        </td>
        <td>
          <button
            className="service-q-a-add-button"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="service-q-a-update-button"
            onClick={[Function]}
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          1
        </td>
        <td>
          question1
        </td>
        <td>
          type1
        </td>
        <td>
          choice1
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          2
        </td>
        <td>
          question2
        </td>
        <td>
          type2
        </td>
        <td>
          choice2
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          3
        </td>
        <td>
          question3
        </td>
        <td>
          type3
        </td>
        <td>
          choice3
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination-row"
  >
    <select
      onChange={[Function]}
    >
      <option
        value={10}
      >
        10
      </option>
      <option
        value={25}
      >
        25
      </option>
      <option
        value={50}
      >
        50
      </option>
      <option
        value={100}
      >
        100
      </option>
      <option
        value="All"
      >
        All
      </option>
    </select>
    <button
      className="pagination-button"
      onClick={[Function]}
    >
      Prev
    </button>
    <button
      className="pagination-button"
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Snapshot renders service questions component updates when there is data entered into the input boxes 1`] = `
<div
  className="service-question-table"
>
  <h3>
    Service Questions
  </h3>
  <div>
    Note: Types are (TrueFalse, MultipleChoice, Range) and choices are Comma-separated
  </div>
  <table
    className="service-q-a-table"
  >
    <thead
      className="service-q-a-table-header"
    >
      <tr
        className="service-q-a-table-row"
      >
        <th>
          ID
        </th>
        <th>
          Question
        </th>
        <th>
          Type
        </th>
        <th>
          Choices
        </th>
        <th>
          Commands
        </th>
      </tr>
    </thead>
    <tbody
      className="service-q-a-tableBody"
    >
      <tr
        className="service-q-a-input-row"
      >
        <td />
        <td>
          <input
            className="service-question-input-question"
            onChange={[Function]}
            placeholder="Question"
            type="text"
            value="what is love?"
          />
        </td>
        <td>
          <input
            className="service-question-input-type"
            onChange={[Function]}
            placeholder="Type"
            type="text"
            value="what is life?"
          />
        </td>
        <td>
          <input
            className="service-question-input-choices"
            onChange={[Function]}
            placeholder="Choices"
            type="text"
            value="what is death?"
          />
        </td>
        <td>
          <button
            className="service-q-a-add-button"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="service-q-a-update-button"
            onClick={[Function]}
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          1
        </td>
        <td>
          question1
        </td>
        <td>
          type1
        </td>
        <td>
          choice1
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          2
        </td>
        <td>
          question2
        </td>
        <td>
          type2
        </td>
        <td>
          choice2
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          3
        </td>
        <td>
          question3
        </td>
        <td>
          type3
        </td>
        <td>
          choice3
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination-row"
  >
    <select
      onChange={[Function]}
    >
      <option
        value={10}
      >
        10
      </option>
      <option
        value={25}
      >
        25
      </option>
      <option
        value={50}
      >
        50
      </option>
      <option
        value={100}
      >
        100
      </option>
      <option
        value="All"
      >
        All
      </option>
    </select>
    <button
      className="pagination-button"
      onClick={[Function]}
    >
      Prev
    </button>
    <button
      className="pagination-button"
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
